$Id: CHANGES,v 1.163 2002/02/21 09:25:31 stelian Exp $

Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
=======================================================================

1.	Fixed a bug in the QFA feature which could have caused 
	a bad tape positionning on restore (causing extra delays in
	restore). Credits go to Uwe Gohlke <uwe@ugsoft.de>.

Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
=======================================================================

1.	Fixed behaviour of dump when exceeding resource limits
	(SIGXFSZ treatment).

2.	Added the -L flag to restore to allow the user to specify a 
	maximal allowed number of miscompares when using restore
	with the -C option to check the backup.

3.	Detailed the manual entry for the -N option of restore.

4.	Added the -a flag to restore to make able doing unattended
	restores in -i or -x mode (automatically walks through the
	multiple dump volumes).

5.	Extended the QFA mode to work with local files and/or
	remote tapes and files. This way, restore can know in advance
	the tape number and the offset for the inodes to extract and 
	can minimize the extraction time by seeking directly to the 
	good tape/offset.

6.	Added the -A <archive> option to both dump and restore, 
	which makes dump to archive a dump table-of-contents in
	the specified file to be used by restore to determine
	whether a file is in the dump file that is being restored.
	(the archive file syntax is also compatible with the
	Solaris ufsdump generated one).

7.	Small fix in restore making it able to read some (broken ?)
	Solaris ufsdump tapes.

8.	Fixed dump to correctly recognise the root filesystem when using
	ext2 disk labels (LABEL=/). Thanks to John Yu <jky@it.bu.edu>
	for reporting this bug.

9.	Added the -P <file> option to restore to create a
	Quick File Access file from an already made dump. Patch 
	contributed by Uwe Gohlke <uwe@ugsoft.de>.
