@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.163 2002/02/21 09:25:31 stelian Exp $
+$Id: CHANGES,v 1.164 2002/02/21 14:07:14 stelian Exp $
 
 Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 =======================================================================
@@ -6,6 +6,10 @@ Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 1.	Fixed a bug in the QFA feature which could have caused 
 	a bad tape positionning on restore (causing extra delays in
 	restore). Credits go to Uwe Gohlke <uwe@ugsoft.de>.
+
+2.	Added a small note in the dump man page specifying that
+	there should be no white space between the option letter and
+	the -j or -z parameter, thanks to Kenneth Porter <shiva@well.com>
 
 Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
 =======================================================================
